--- a/.gitignore
+++ b/.gitignore
@@ -72,4 +72,4 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
 # Ignore all files in the Assets folder
-Assets/*
+Assets/Sprites
